# EtherCAT-Master

./: .gitignore  .gitlab-ci.yml  Doxyfile.in  INSTALL.md  Kbuild.in  Makefile.am  NEWS  README.md  bootstrap  configure.ac  ethercat.spec.in
.github/: README.md
devices/: 8139too-3.0-ethercat.c  8139too-3.12-ethercat.c  8139too-3.14-ethercat.c  8139too-3.16-ethercat.c  8139too-3.2-ethercat.c  8139too-3.4-ethercat.c  8139too-3.6-ethercat.c  8139too-3.8-ethercat.c  8139too-4.4-ethercat.c  8139too-5.10-ethercat.c  8139too-5.14-ethercat.c  8139too-5.15-ethercat.c  8139too-6.1-ethercat.c  Kbuild.in  Makefile.am  create_driver_table.py  e100-3.0-ethercat.c  e100-3.10-ethercat.c  e100-3.12-ethercat.c  e100-3.14-ethercat.c  e100-3.16-ethercat.c  e100-3.4-ethercat.c  e100-3.6-ethercat.c  e100-3.8-ethercat.c  e100-4.4-ethercat.c  e100-5.10-ethercat.c  e100-5.14-ethercat.c  e100-5.15-ethercat.c  e100-5.4-ethercat.c  e100-6.1-ethercat.c  e100-6.4-ethercat.c  ecdev.h  generic.c
devices/ccat/: Kbuild.in  Makefile.am  module.c  netdev.c
devices/e1000/: Kbuild.in  Makefile.am  e1000-5.10-ethercat.h  e1000-5.14-ethercat.h  e1000-5.15-ethercat.h  e1000-6.1-ethercat.h  e1000_ethtool-5.14-ethercat.c  e1000_main-4.4-ethercat.c  e1000_main-5.10-ethercat.c  e1000_main-5.14-ethercat.c  e1000_main-5.15-ethercat.c  e1000_main-6.1-ethercat.c
devices/e1000e/: Kbuild.in  Makefile.am  e1000-5.14-ethercat.h  e1000-6.1-ethercat.h  netdev-5.14-ethercat.c  netdev-6.1-ethercat.c
devices/genet/: Kbuild.in  Makefile.am  bcmgenet-5.14-ethercat.c
devices/igb/: Kbuild.in  igb-5.14-ethercat.h  igb-5.15-ethercat.h  igb-6.1-ethercat.h  igb_main-4.4-ethercat.c  igb_main-5.10-ethercat.c  igb_main-5.14-ethercat.c  igb_main-5.15-ethercat.c  igb_main-6.1-ethercat.c
devices/igc/: Kbuild.in  Makefile.am  igc-5.14-ethercat.h  igc-5.15-ethercat.h  igc-6.1-ethercat.h  igc-6.4-ethercat.h  igc-6.6-ethercat.h  igc_ethtool-6.4-ethercat.c  igc_main-5.14-ethercat.c  igc_main-5.15-ethercat.c  igc_main-6.1-ethercat.c  igc_main-6.4-ethercat.c  igc_main-6.6-ethercat.c  igc_xdp-5.14-ethercat.c  update.sh
devices/r8169/: Kbuild.in  Makefile.am  r8169_main-5.10-ethercat.c  r8169_main-5.14-ethercat.c  r8169_main-5.15-ethercat.c  r8169_main-6.1-ethercat.c  r8169_phy_config-5.10-ethercat.c
devices/realtek/: Kbuild.in  Makefile.am  r8169_main-5.10-ethercat.c
devices/stmmac/: Kbuild.in  Makefile.am  chain_mode-5.10-ethercat.c  common-5.10-ethercat.h  common-5.10-orig.h  dwmac-dwc-qos-eth-5.10-ethercat.c  dwmac-dwc-qos-eth-5.10-orig.c  dwmac-dwc-qos-eth-6.1-ethercat.c  dwmac-dwc-qos-eth-6.1-orig.c  dwmac-intel-5.10-ethercat.c  dwmac-intel-5.10-orig.c  dwmac100-5.10-ethercat.h  dwmac1000-5.10-orig.h  dwmac1000_core-5.10-orig.c  dwmac1000_dma-5.10-ethercat.c  dwmac100_core-5.10-ethercat.c  dwmac100_dma-5.10-ethercat.c  dwmac4-5.10-ethercat.h  dwmac4_core-5.10-orig.c  dwmac4_descs-5.10-orig.c  dwmac4_dma-5.10-orig.c  dwmac4_lib-5.10-orig.c  dwmac5-5.10-ethercat.c  dwmac_lib-5.10-ethercat.c  dwmac_lib-5.10-orig.c  dwxgmac2-5.10-orig.h  dwxgmac2_core-5.10-orig.c  dwxgmac2_descs-5.10-orig.c  dwxgmac2_dma-5.10-ethercat.c  enh_desc-5.10-orig.c  hwif-5.10-ethercat.c  mmc_core-5.10-ethercat.c  norm_desc-5.10-orig.c  ring_mode-5.10-orig.c  stmmac-5.10-ethercat.h  stmmac-5.10-orig.h  stmmac-6.1-ethercat.h  stmmac_ethtool-5.10-orig.c  stmmac_hwtstamp-5.10-orig.c  stmmac_main-5.10-ethercat.c  (+16 more)
devices/ti-am65-cpsw-nuss/: Kbuild.in  Makefile.am  am65-cpsw-ethtool-6.1-ethercat.c  am65-cpsw-nuss-6.1-ethercat.c  am65-cpsw-nuss-6.1-ethercat.h  am65-cpsw-qos-6.1-ethercat.c  am65-debugfs-6.1-ethercat.c  cpsw_ale-6.1-ethercat.c  cpsw_sl-6.1-ethercat.c  k3-cppi-desc-pool-6.1-ethercat.c  update.sh
documentation/: Makefile  ethercat_doc.tex  ethercat_doc_fr.tex
documentation/graphs/: fsm_slave_conf.dot
examples/: Kbuild.in  Makefile.am
examples/dc_rtai/: Kbuild.in  Makefile.am  dc_rtai_sample.c
examples/dc_user/: Makefile.am  main.c
examples/mini/: Kbuild.in  Makefile.am  mini.c
examples/rtai/: Kbuild.in  Makefile.am  rtai_sample.c
examples/rtai_rtdm/: Makefile.am  main.c
examples/rtai_rtdm_dc/: Makefile.am  main.c
examples/tty/: Kbuild.in  Makefile.am  serial.c  serial.h  tty.c
examples/user/: Makefile.am  main.c
examples/xenomai/: Makefile.am  main.c
examples/xenomai_posix/: Makefile.am  main.c
fake_lib/: README.md  fakeethercat.cpp  fakeethercat.h
include/: Makefile.am  ecrt.h  ectty.h
lib/: Makefile.am  common.c  domain.c  domain.h  ioctl.h  libethercat.map  master.c  master.h  reg_request.c  reg_request.h  sdo_request.c  sdo_request.h  slave_config.c  slave_config.h  soe_request.c  soe_request.h  voe_handler.c  voe_handler.h
lib/cmake/: EthercatConfig.cmake.in
master/: Kbuild.in  Makefile.am  api_usage_notes.md  cdev.c  cdev.h  coe_emerg_ring.c  coe_emerg_ring.h  datagram.c  datagram.h  datagram_pair.c  datagram_pair.h  debug.c  debug.h  device.c  device.h  domain.c  domain.h  doxygen.c  eoe_request.c  eoe_request.h  ethernet.c  ethernet.h  flag.c  fmmu_config.c  fmmu_config.h  foe.h  foe_request.c  foe_request.h  fsm_change.c  fsm_change.h  fsm_coe.c  fsm_coe.h  fsm_eoe.c  fsm_eoe.h  fsm_foe.c  fsm_foe.h  fsm_master.c  fsm_master.h  fsm_pdo.c  fsm_pdo.h  (+52 more)
script/: Makefile.am  ethercat.bash_completion  ethercat.conf  ethercatctl.in  ifup-eoe.sh
script/init.d/: Makefile.am  ethercat.in
tool/: Command.cpp  Command.h  CommandAlias.cpp  CommandAlias.h  CommandCStruct.cpp  CommandCStruct.h  CommandConfig.cpp  CommandConfig.h  CommandCrc.cpp  CommandData.cpp  CommandData.h  CommandDebug.cpp  CommandDebug.h  CommandDomains.cpp  CommandDomains.h  CommandDownload.cpp  CommandDownload.h  CommandEoe.cpp  CommandEoe.h  CommandFoeRead.cpp  CommandFoeRead.h  CommandFoeWrite.cpp  CommandFoeWrite.h  CommandGraph.cpp  CommandGraph.h  CommandIp.cpp  CommandIp.h  CommandMaster.cpp  CommandMaster.h  CommandPdos.cpp  CommandPdos.h  CommandRegRead.cpp  CommandRegRead.h  CommandRegWrite.cpp  CommandRegWrite.h  CommandRescan.cpp  CommandRescan.h  CommandSdos.cpp  CommandSdos.h  CommandSiiRead.cpp  (+34 more)
tty/: Kbuild.in  Makefile.am  module.c
(+2 files in other folders)
