#------------------------------------------------------------------------------
#
#  Copyright (C) 2024  BayLibre SAS
#
#  This file is part of the IgH EtherCAT Master.
#
#  The IgH EtherCAT Master is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License version 2, as
#  published by the Free Software Foundation.
#
#  The IgH EtherCAT Master is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
#  Public License for more details.
#
#  You should have received a copy of the GNU General Public License along
#  with the IgH EtherCAT Master; if not, write to the Free Software
#  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
#  ---
#
#  The license mentioned above concerns the source code only. Using the
#  EtherCAT technology and brand is only permitted in compliance with the
#  industrial property and similar rights of Beckhoff Automation GmbH.
#
#------------------------------------------------------------------------------

include $(top_srcdir)/Makefile.kbuild

EXTRA_DIST = \
	am65-cpsw-ethtool-6.1-ethercat.c \
	am65-cpsw-ethtool-6.1-orig.c \
	am65-cpsw-nuss-6.1-ethercat.c \
	am65-cpsw-nuss-6.1-ethercat.h \
	am65-cpsw-nuss-6.1-orig.c \
	am65-cpsw-nuss-6.1-orig.h \
	am65-cpsw-qos-6.1-ethercat.c \
	am65-cpsw-qos-6.1-ethercat.h \
	am65-cpsw-qos-6.1-orig.c \
	am65-cpsw-qos-6.1-orig.h \
	am65-cpsw-switchdev-6.1-ethercat.h \
	am65-cpsw-switchdev-6.1-orig.h \
	am65-cpts-6.1-ethercat.h \
	am65-cpts-6.1-orig.h \
	am65-debugfs-6.1-ethercat.c \
	am65-debugfs-6.1-orig.c \
	cpsw_ale-6.1-ethercat.c \
	cpsw_ale-6.1-ethercat.h \
	cpsw_ale-6.1-orig.c \
	cpsw_ale-6.1-orig.h \
	cpsw_sl-6.1-ethercat.c \
	cpsw_sl-6.1-ethercat.h \
	cpsw_sl-6.1-orig.c \
	cpsw_sl-6.1-orig.h \
	k3-cppi-desc-pool-6.1-ethercat.c \
	k3-cppi-desc-pool-6.1-ethercat.h \
	k3-cppi-desc-pool-6.1-orig.c \
	k3-cppi-desc-pool-6.1-orig.h \
	update.sh

#------------------------------------------------------------------------------
